--- a/practice2/src/main/webapp/WEB-INF/commands.properties
+++ b/practice2/src/main/webapp/WEB-INF/commands.properties
@@ -1,3 +1,4 @@
 /user/login.do=handler.user.LoginHandler
 /user/join.do=handler.user.JoinHandler
 /user/idcheck.do=handler.user.CheckHandler
+/user/logout.do=handler.user.LogoutHandler
