before bbs make

--- a/practice2/src/main/webapp/WEB-INF/commands.properties
+++ b/practice2/src/main/webapp/WEB-INF/commands.properties
@@ -2,3 +2,4 @@
 /user/join.do=handler.user.JoinHandler
 /user/idcheck.do=handler.user.CheckHandler
 /user/logout.do=handler.user.LogoutHandler
+/user/myinfo.do=handler.user.MyinfoHandler
