--- a/practice2/src/main/webapp/WEB-INF/commands.properties
+++ b/practice2/src/main/webapp/WEB-INF/commands.properties
@@ -2,4 +2,7 @@
 /user/join.do=handler.user.JoinHandler
 /user/idcheck.do=handler.user.CheckHandler
 /user/logout.do=handler.user.LogoutHandler
-/user/myinfo.do=handler.user.MyinfoHandler
+
+/board/list.do=handler.board.ListHandler
+/board/write.do=handler.board.WriteHandler
+/board/view.do=handler.board.ViewHandler
