--- a/practice2/src/main/webapp/WEB-INF/commands.properties
+++ b/practice2/src/main/webapp/WEB-INF/commands.properties
@@ -6,3 +6,5 @@
 /board/list.do=handler.board.ListHandler
 /board/write.do=handler.board.WriteHandler
 /board/view.do=handler.board.ViewHandler
+/board/edit.do=handler.board.EditHandler
+/board/delete.do=handler.board.DeleteHandler
