add api && design

--- a/practice2/src/main/webapp/WEB-INF/commands.properties
+++ b/practice2/src/main/webapp/WEB-INF/commands.properties
@@ -1,10 +1,20 @@
 /user/login.do=handler.user.LoginHandler
 /user/join.do=handler.user.JoinHandler
-/user/idcheck.do=handler.user.CheckHandler
 /user/logout.do=handler.user.LogoutHandler
-
+/user/myinfo.do=handler.user.MyinfoHandler
+/user/idcheck.do=handler.user.IdCheckHandler
 /board/list.do=handler.board.ListHandler
 /board/write.do=handler.board.WriteHandler
 /board/view.do=handler.board.ViewHandler
 /board/edit.do=handler.board.EditHandler
 /board/delete.do=handler.board.DeleteHandler
+/announce/list.do=handler.announce.ListHandler
+/announce/detail.do=handler.announce.DetailHandler
+/school/list.do=handler.school.ListHandler
+/recruit/list.do=handler.recruit.ListHandler
+/recruit/detail.do=handler.recruit.DetailHandler
+/recruit/write.do=handler.recruit.WriteHandler
+/recruit/mylist.do=handler.recruit.MyListHandler
+/recruit/view.do=handler.recruit.ViewHandler
+/recruit/delete.do=handler.recruit.DeleteHandler
+/recruit/edit.do=handler.recruit.EditHandler
