--- a/practice2/src/main/webapp/WEB-INF/commands.properties
+++ b/practice2/src/main/webapp/WEB-INF/commands.properties
@@ -18,3 +18,6 @@
 /recruit/view.do=handler.recruit.ViewHandler
 /recruit/delete.do=handler.recruit.DeleteHandler
 /recruit/edit.do=handler.recruit.EditHandler
+/education/list.do=handler.education.ListHandler
+/education/detail.do=handler.education.DetailHandler
+/recommend/list.do=handler.recommend.ListHandler
